@@ -108,4 +108,4 @@ AC_SUBST(ac_cv_library_combo)
 #--------------------------------------------------------------------
 # Produce the output files
 #--------------------------------------------------------------------
-AC_OUTPUT(config.h config.make Makefile GNUstep.sh)
+AC_OUTPUT(config.h config.make openapp Makefile GNUstep.sh)
